--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -13,27 +13,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.2/firebase-firestore-compat.js"></script>
 
-    <style>
-      body {
-        background-color: #79c0f7;
-        color: #ffffff;
-      }
-
-      .navbar {
-        background-color: #2196f3;
-        color: #bce9fb;
-      }
-
-      .form-check-input:checked {
-        background-color: #2196f3;
-        border-color: #2196f3;
-      }
-
-      .btn {
-        background-color: #2196f3;
-        border-color: #2196f3;
-      }
-    </style>
+    <link rel="stylesheet" href="../css/style.css" type="text/css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
