--- a/public/pages/privacy.html
+++ b/public/pages/privacy.html
@@ -11,17 +11,7 @@
       crossorigin="anonymous"
     />
 
-    <style>
-      body {
-        background-color: #79c0f7;
-        color: #ffffff;
-      }
-
-      .navbar {
-        background-color: #2196f3;
-        color: #bce9fb;
-      }
-    </style>
+    <link rel="stylesheet" href="../css/style.css" type="text/css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
