--- a/public/pages/terms.html
+++ b/public/pages/terms.html
@@ -11,12 +11,13 @@
       crossorigin="anonymous"
     />
 
+    <link rel="icon" href="../img/favicon.ico" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="../index.html">SWiT Study</a>
+        <a class="navbar-brand" href="../">SWiT Study</a>
         <button
           class="navbar-toggler"
           type="button"
