--- a/public/404.html
+++ b/public/404.html
@@ -11,13 +11,19 @@
       crossorigin="anonymous"
     />
 
-    <link rel="icon" href="./img/favicon.ico" />
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="icon" href="https://swit-91d08.web.app/img/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://swit-91d08.web.app/css/style.css"
+      type="text/css"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="./">SWiT Study</a>
+        <a class="navbar-brand" href="https://swit-91d08.web.app/"
+          >SWiT Study</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -32,15 +38,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="./pages/terms.html">利用規約</a>
+              <a
+                class="nav-link"
+                href="https://swit-91d08.web.app/pages/terms.html"
+                >利用規約</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/privacy.html"
+              <a
+                class="nav-link"
+                href="https://swit-91d08.web.app/pages/privacy.html"
                 >プライバシーポリシー</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/contact.html">お問い合わせ</a>
+              <a
+                class="nav-link"
+                href="https://swit-91d08.web.app/pages/contact.html"
+                >お問い合わせ</a
+              >
             </li>
           </ul>
         </div>
