--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
         <button
           class="navbar-toggler"
           type="button"
+          style="border: none; box-shadow: none"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
           aria-controls="navbarNav"
@@ -57,8 +58,11 @@
         />
       </div>
 
+      <div class="container py-3 d-flex justify-content-center">
+        ダウンロードはこちらから
+      </div>
       <div
-        class="container py-5 w-75 d-flex justify-content-evenly"
+        class="container w-75 d-flex justify-content-evenly"
         style="max-width: 600px"
       >
         <a
