--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -130,9 +130,11 @@
                 required
               ></textarea>
             </div>
-            <button id="submit" type="submit" class="btn btn-primary">
-              送信
-            </button>
+            <div class="mb-3 text-center">
+              <button id="submit" type="submit" class="btn btn-primary">
+                送信
+              </button>
+            </div>
           </form>
         </div>
       </div>
